<resources>
    <string name="register_title">Glad, you are here</string>
    <string name="register_title_Desc">Time to start you journey of discovery</string>
    <string name="username_email">USERNAME / EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="recover_password">Recover Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="not_registered_yet_create_an_account">Not registered yet? Create An Account</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_desc">Let us get back to your journey</string>
    <string name="thinking_of_something_npin_it_here">Thinking of something?\nPin it here</string>
    <string name="safe_space">This is your safe space. Take the time to engage your thoughts, plan your day and many more.</string>
</resources>