<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="create"
            type="com.otsembo.pinit.authentication.presentation.pages.register.AccountCreate" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/register_side_general_margin"
        android:paddingEnd="@dimen/register_side_general_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pinned"
            android:layout_marginTop="@dimen/register_top_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRegisterTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/general_field_margin"
            android:text="@string/register_title"
            android:textSize="@dimen/register_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRegisterText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_title_Desc"
            android:textSize="@dimen/register_title_desc_size"
            app:layout_constraintTop_toBottomOf="@id/txtRegisterTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/general_field_margin" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRegisterText"
            android:layout_marginTop="@dimen/edt_text_margin"
            app:hintEnabled="true"
            android:hint="@string/email"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmail"
                android:text="@={create.email}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:layout_marginTop="@dimen/general_field_margin"
            app:hintEnabled="true"
            android:hint="@string/username"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/tilUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtUsername"
                android:text="@={create.username}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUsername"
            android:layout_marginTop="@dimen/general_field_margin"
            app:hintEnabled="true"
            android:hint="@string/password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:text="@={create.password}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:id="@+id/btnSignIn"
            android:layout_height="@dimen/button_height"
            android:text="@string/create_account"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/edt_text_margin"
            style="@style/AuthRegisterButton"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtGoToRegister"
            android:id="@+id/pbSignIn" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtGoToRegister"
            android:text="@string/already_have_an_account_login"
            android:textSize="@dimen/register_title_desc_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginBottom="@dimen/register_side_general_margin"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>