<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        style="@style/Auth">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/onboarding_card_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_marginTop="@dimen/register_side_general_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/onboard"
                android:scaleType="centerCrop"
                android:id="@+id/imgOnBoard" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/onboarding_card_radius">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thinking_of_something_npin_it_here"
                android:textSize="@dimen/onboarding_title"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txtOnBoardTitle"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe_space"
                android:textSize="@dimen/onboarding_desc"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/txtOnBoardTitle"
                android:id="@+id/txtOnBoardDesc"
                android:layout_marginTop="@dimen/general_field_margin"
                android:textStyle="italic"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/register_side_general_margin">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="0.98"
                    android:id="@+id/btnRegister"
                    android:text="@string/create_account"
                    style="@style/AuthRegisterButton" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="0.04" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="0.98"
                    android:id="@+id/btnLogin"
                    android:text="@string/sign_in"
                    style="@style/AuthLoginButton" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>